--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "intro">
     <h1 style="text-align: center; font-size: 100px;">Stoicism</h1>
     </div>
-    <img src="..\Aury.jpeg" alt="Nothing But Greatness" style="border-radius: 100%;" class="imm">
+    <img src="Aury.jpeg" alt="Nothing But Greatness" style="border-radius: 100%;" class="imm">
     <div class="intro">
     <h3 style="text-align: center; font-size: 50px;">Marcus Aurelius</h3>
     <p style="text-align: justify;">The second century CE Roman emperor Marcus Aurelius was also a Stoic philosopher, 
